fixed jumpy animations in WindowPlacementIndicator, Window component now works nice with viewport when isConstrained = false, but it currently alos has bugged resizing behavior

--- a/src/components/Window/Window.module.css
+++ b/src/components/Window/Window.module.css
@@ -31,6 +31,9 @@
 .container--locked {
   pointer-events: none;
 }
+.container--fixed {
+  position: fixed;
+}
 
 .top {
   position: absolute;
